[updated]: header and footer updated rich with header cms data and using the context for enabling cacheing for unncessary api calling

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,7 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-poppins);
   --font-mono: var(--font-orbitron);
+  --breakpoint-1090: 1090px;
 }
 
 .font-orbitron {
